# rust-tutorial

./: .gitignore  Cargo.toml  README.md
asynchronous/: Cargo.toml  README.md
asynchronous/src/: main.rs
builder-pattern/: Cargo.toml  README.md
builder-pattern/src/: main.rs
logging/: Cargo.toml  README.md
logging/src/: main.rs
middleware/: Cargo.toml  README.md
middleware/src/: main.rs
middleware02/: Cargo.toml
middleware02/src/: main.rs
monitor01/: Cargo.toml
monitor01/src/: main.rs
trait01/: Cargo.toml  README.md
trait01/src/: main.rs
trait02-marker-traits/: Cargo.toml  README.md
trait03-dynamic-dispatch/: Cargo.toml
trait03-dynamic-dispatch/src/: main.rs
